objects/Field_Change_Notification__e.object
<CustomObject>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Field Change Notification</label>
    <pluralLabel>Field Change Notifications</pluralLabel>
</CustomObject>